fixing text size adjustments on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@ html,body
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
+    text-size-adjust: none;
 }
 
 body{
